--- a/Assets/CategoryButton/CategoryButton.asmdef
+++ b/Assets/CategoryButton/CategoryButton.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "ToolBarCategories",
+    "name": "CategoryButton",
     "rootNamespace": "",
     "references": [],
     "includePlatforms": [],
