--- a/Assets/MorePlatforms/StaticFiles/ThunderstorePackage/manifest.json
+++ b/Assets/MorePlatforms/StaticFiles/ThunderstorePackage/manifest.json
@@ -1,10 +1,11 @@
 {
   "name": "MorePlatforms",
-  "version_number": "1.1.2",
+  "version_number": "1.2.0",
   "website_url": "https://github.com/TobbyTheBobby",
   "description": "More platforms that you can use to make the ultimate vertical city!",
   "dependencies": [
     "BepInEx-BepInExPack_Timberborn-5.4.19",
-    "Timberborn_Central-TimberAPI-0.4.4"
+    "Timberborn_Central-TimberAPI-0.4.4",
+    "Tobbert-CategoryButton-1.0.2"
   ]
 }
