--- a/Assets/VerticalPowerShaft/VerticalPowerShaft.asmdef
+++ b/Assets/VerticalPowerShaft/VerticalPowerShaft.asmdef
@@ -8,7 +8,16 @@
     "overrideReferences": true,
     "precompiledReferences": [
         "BepInEx.dll",
-        "TimberAPI.dll"
+        "TimberAPI.dll",
+        "Bindito.Core.dll",
+        "0Harmony.dll",
+        "Timberborn.SingletonSystem.dll",
+        "Timberborn.TemplateSystem.dll",
+        "Timberborn.BlockSystem.dll",
+        "Timberborn.MechanicalSystem.dll",
+        "Timberborn.Coordinates.dll",
+        "Timberborn.BlockObjectTools.dll",
+        "Timberborn.Clusters.dll"
     ],
     "autoReferenced": true,
     "defineConstraints": [],
