--- a/Assets/VerticalPowerShaft/StaticFiles/ThunderstorePackage/manifest.json
+++ b/Assets/VerticalPowerShaft/StaticFiles/ThunderstorePackage/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "VerticalPowerShafts",
-  "version_number": "1.0.2",
+  "version_number": "1.1.0",
   "website_url": "https://github.com/TobbyTheBobby",
-  "description": "Adds three new power shafts that allow the transfer of power vertically.",
+  "description": "Adds three new power shafts that allow the transfer of power vertically. Also adds a Universal Power shaft that changes shape based on the connections it has.",
   "dependencies": [
     "BepInEx-BepInExPack_Timberborn-5.4.19",
     "Timberborn_Central-TimberAPI-0.4.4"
