MultithreadedNavigation working prototype v1

--- a/Assets/一 Unsupported or Failed/MultithreadedNavigation/MultithreadedNavigation.asmdef
+++ b/Assets/一 Unsupported or Failed/MultithreadedNavigation/MultithreadedNavigation.asmdef
@@ -30,7 +30,11 @@
         "Timberborn.Navigation.dll",
         "Timberborn.EnterableSystem.dll",
         "Timberborn.Common.dll",
-        "Timberborn.TickSystem.dll"
+        "Timberborn.TickSystem.dll",
+        "Timberborn.NeedBehaviorSystem.dll",
+        "Timberborn.NeedSystem.dll",
+        "Timberborn.SlotSystem.dll",
+        "Timberborn.CharacterModelSystem.dll"
     ],
     "autoReferenced": true,
     "defineConstraints": [],
