--- a/Assets/一 Unsupported or Failed/MultithreadedNavigation/MultithreadedNavigation.asmdef
+++ b/Assets/一 Unsupported or Failed/MultithreadedNavigation/MultithreadedNavigation.asmdef
@@ -34,7 +34,12 @@
         "Timberborn.NeedBehaviorSystem.dll",
         "Timberborn.NeedSystem.dll",
         "Timberborn.SlotSystem.dll",
-        "Timberborn.CharacterModelSystem.dll"
+        "Timberborn.CharacterModelSystem.dll",
+        "Timberborn.InventorySystem.dll",
+        "Timberborn.Metrics.dll",
+        "Timberborn.NotificationSystemUI.dll",
+        "Timberborn.YielderFinding.dll",
+        "Timberborn.Planting.dll"
     ],
     "autoReferenced": true,
     "defineConstraints": [],
