--- a/Assets/TobbyTools/TobbyTools.asmdef
+++ b/Assets/TobbyTools/TobbyTools.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "TextureReplacementTool",
+    "name": "TobbyTools",
     "rootNamespace": "",
     "references": [],
     "includePlatforms": [],
@@ -35,7 +35,8 @@
         "Timberborn.AssetSystem.dll",
         "Timberborn.PlantingUI.dll",
         "Timberborn.Planting.dll",
-        "Timberborn.PrefabSystem.dll"
+        "Timberborn.PrefabSystem.dll",
+        "Timberborn.BaseComponentSystem.dll"
     ],
     "autoReferenced": true,
     "defineConstraints": [],
