Updated Ladder to game version 0.4.3

--- a/Assets/Ladder/Ladder.asmdef
+++ b/Assets/Ladder/Ladder.asmdef
@@ -29,7 +29,8 @@
         "Timberborn.NavigationUI.dll",
         "Timberborn.BuildingsNavigation.dll",
         "Timberborn.Buildings.dll",
-        "Timberborn.PrefabSystem.dll"
+        "Timberborn.PrefabSystem.dll",
+        "Timberborn.BaseComponentSystem.dll"
     ],
     "autoReferenced": true,
     "defineConstraints": [],
