--- a/Assets/TobbyTools/TobbyTools.asmdef
+++ b/Assets/TobbyTools/TobbyTools.asmdef
@@ -49,7 +49,8 @@
         "Timberborn.Beavers.dll",
         "Timberborn.StatusSystem.dll",
         "Timberborn.WindSystem.dll",
-        "Timberborn.NeedApplication.dll"
+        "Timberborn.NeedApplication.dll",
+        "Timberborn.Cutting.dll"
     ],
     "autoReferenced": true,
     "defineConstraints": [],
