--- a/Assets/MorePaths/MorePaths.asmdef
+++ b/Assets/MorePaths/MorePaths.asmdef
@@ -4,7 +4,7 @@
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
-    "allowUnsafeCode": false,
+    "allowUnsafeCode": true,
     "overrideReferences": true,
     "precompiledReferences": [
         "BepInEx.dll",
@@ -38,15 +38,20 @@
         "Timberborn.Persistence.dll",
         "System.Collections.Immutable.dll",
         "Timberborn.AssetSystem.dll",
-        "Timberborn.FactionSystemGame.dll",
         "Timberborn.FactionSystem.dll",
         "Timberborn.SceneLoading.dll",
-        "Timberborn.MasterSceneLoading.dll",
         "Timberborn.ToolSystem.dll",
         "Timberborn.SettingsSystem.dll",
         "Timberborn.CoreUI.dll",
         "Timberborn.Localization.dll",
-        "Timberborn.PrefabSystem.dll"
+        "Timberborn.PrefabSystem.dll",
+        "Timberborn.BaseComponentSystem.dll",
+        "Timberborn.Common.dll",
+        "Timberborn.GameFactionSystem.dll",
+        "Timberborn.Meshy.dll",
+        "Timberborn.AreaSelectionSystem.dll",
+        "Timberborn.Navigation.dll",
+        "Timberborn.ConstructibleSystem.dll"
     ],
     "autoReferenced": true,
     "defineConstraints": [],
